--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name:         amys-blog-theme
+Theme Name:         helena-wp
 Theme URI:          http://www.google.com
 Github Theme URI:   https://www.google.com
-Description:        Amy's blog theme is a WordPress starter theme based on Foundation 6 by Zurb
+Description:        helena's theme
 Version:            1.0.0
 Author:             David Duffy
 Author URI:         http://www.google.com
@@ -11,1058 +11,4 @@ License:            MIT License
 License URI:        http://www.opensource.org/licenses/mit-license.php
 */
 
-@-moz-keyframes logo-fade {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes logo-fade {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes logo-fade {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-.no-max {
-  max-width: 100%;
-}
-
-.no-max.pad {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.content-pad {
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-body {
-  font-size: 62.5%;
-  letter-spacing: 0.025em;
-}
-
-body {
-  font-family: "Lusitana", times ,serif !important;
-  color: #292C2F;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Quicksand", helvetica ,sans-serif !important;
-  text-transform: uppercase;
-  line-height: 1.15em;
-}
-
-h1, h2, h3 {
-  font-weight: 300;
-}
-
-header {
-  padding: 20px 19px 0px !important;
-}
-header h1 {
-  display: none;
-}
-
-ol {
-  list-style-type: none;
-  margin: 0 1.4rem;
-}
-
-nav {
-  display: none;
-  background: rgba(255, 255, 255, 0.98);
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 100;
-  overflow: scroll;
-}
-@media all and (min-width: 40.063em) {
-  nav {
-    overflow: visible;
-  }
-}
-nav > ul {
-  margin: 100px auto 0 !important;
-  text-align: center;
-  max-width: 300px;
-}
-@media all and (min-width: 40.063em) {
-  nav > ul {
-    margin: 100px 0 20px;
-    max-width: 100%;
-    text-align: center;
-  }
-}
-nav > ul > li {
-  display: block;
-  position: relative;
-}
-@media all and (min-width: 40.063em) {
-  nav > ul > li {
-    display: inline-block;
-    margin: 0 15px;
-    vertical-align: top;
-  }
-}
-@media all and (min-width: 64.063em) {
-  nav > ul > li {
-    margin: 0 50px;
-  }
-}
-nav > ul > li > a {
-  font-size: 1.4em;
-  font-weight: 700;
-  padding: 10px 20px;
-  display: block;
-}
-nav > ul > li > a:hover {
-  color: rgba(56, 64, 71, 0.8);
-}
-@media all and (min-width: 40.063em) {
-  nav > ul > li > a {
-    line-height: 60px;
-    font-size: 1.6em;
-  }
-}
-nav .sub-menu {
-  display: block;
-  margin: -10px 0 20px !important;
-}
-nav .sub-menu a {
-  font-size: 1em;
-  display: block;
-  padding: 5px 20px;
-}
-@media all and (min-width: 40.063em) {
-  nav .sub-menu a {
-    padding: 5px 0;
-  }
-}
-nav .sub-menu a:hover {
-  color: rgba(56, 64, 71, 0.8);
-}
-@media all and (min-width: 40.063em) {
-  nav {
-    overflow: visible;
-  }
-}
-
-.nav-toggle {
-  background: rgba(255, 255, 255, 0.5);
-  height: 40px;
-  width: 43px;
-  display: none;
-  z-index: 102;
-  position: fixed;
-  top: 12px;
-  left: 12px;
-  opacity: 0.3;
-  -webkit-transition: opacity 100ms ease-in-out;
-  -moz-transition: opacity 100ms ease-in-out;
-  -o-transition: opacity 100ms ease-in-out;
-  transition: opacity 100ms ease-in-out;
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-}
-.logged-in .nav-toggle {
-  top: 50px;
-}
-.nav-toggle:hover {
-  opacity: .5;
-}
-.nav-toggle span,
-.nav-toggle span:before,
-.nav-toggle span:after {
-  display: block;
-  cursor: pointer;
-  height: 3px;
-  width: 30px;
-  background: #384047;
-  position: absolute;
-  display: block;
-  content: "";
-  left: 0;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -o-border-radius: 2px;
-  border-radius: 2px;
-  -webkit-transition: all 100ms ease-in-out;
-  -moz-transition: all 100ms ease-in-out;
-  -o-transition: all 100ms ease-in-out;
-  transition: all 100ms ease-in-out;
-}
-.nav-toggle span {
-  top: 19px;
-  left: 6px;
-}
-.nav-toggle span:before {
-  top: -10px;
-}
-.nav-toggle span:after {
-  bottom: -10px;
-}
-.nav-toggle span:hover span:before {
-  top: -15px;
-}
-.nav-toggle span:hover span:after {
-  bottom: -15px;
-}
-.nav-toggle.expanded {
-  opacity: 1;
-}
-.nav-toggle.expanded span {
-  background: none;
-}
-.nav-toggle.expanded span:before {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  top: 0;
-  left: 0;
-  background: #ed5a5a;
-}
-.nav-toggle.expanded span:after {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  bottom: 0;
-  left: 0;
-  background: #ed5a5a;
-}
-
-.footer-clear {
-  display: block;
-  height: 60px;
-  clear: both;
-  width: 100%;
-}
-
-footer {
-  background: rgba(255, 255, 255, 0.9);
-  position: relative;
-  bottom: 0;
-  padding-bottom: 10px;
-  -webkit-transition: background 600ms ease-in-out;
-  -moz-transition: background 600ms ease-in-out;
-  -o-transition: background 600ms ease-in-out;
-  transition: background 600ms ease-in-out;
-}
-footer:hover {
-  background: white;
-  -webkit-transition: background 200ms ease-in-out;
-  -moz-transition: background 200ms ease-in-out;
-  -o-transition: background 200ms ease-in-out;
-  transition: background 200ms ease-in-out;
-}
-@media all and (min-width: 40.063em) {
-  footer {
-    padding-top: 10px;
-    box-shadow: 0 -1px 0 0 #eeeeee;
-  }
-}
-@media screen and (min-width: 64em){
-  footer {
-    position: fixed;
-  }
-}
-footer p {
-  margin: 0;
-  color: #c6ccd2;
-  font-size: 1.2em;
-  line-height: 20px;
-  text-align: center;
-}
-@media all and (min-width: 40.063em) {  
-  footer p {
-    float: right;
-    width: auto;
-    text-align: right;
-  }
-}
-footer .social-links {
-  text-align: center;
-  height: 20px;
-  width: 100%;
-  margin-bottom: 10px;
-}
-@media all and (min-width: 40.063em) {
-  footer .social-links {
-    margin-left: 5px;
-    margin-bottom: 0;
-    float: left;
-    text-align: left;
-    width: auto;
-  }
-}
-
-.carousel-wrap .carousel img {
-  margin: 0 auto;
-}
-.carousel-wrap .orbit-bullets-container {
-  position: absolute;
-  bottom: 10px;
-  width: 100%;
-}
-.carousel-wrap .orbit-bullets-container .orbit-bullets {
-  margin: 0 auto !important;
-  top: 0 !important;
-}
-.carousel-wrap .orbit-bullets-container .orbit-bullets li {
-  background: rgba(255, 255, 255, 0.3);
-}
-.carousel-wrap .orbit-bullets-container .orbit-bullets li.active {
-  background: rgba(255, 255, 255, 0.7);
-}
-
-.grid-item {
-  position: relative;
-  padding-top: 20px;
-}
-
-.two-column .secondary {
-  border-top: 1px solid #edeff0;
-  padding-top: 20px;
-}
-@media all and (min-width: 40.063em) {
-  .two-column .secondary {
-    max-width: 32.5em;
-  }
-}
-.two-column .primary {
-  max-width: 68.5em;
-}
-
-.leader {
-  margin-top: 20px;
-  margin-bottom: 40px;
-}
-@media all and (min-width: 40.063em) {
-  .leader {
-    /* margin-top: 80px; */
-    margin-bottom: 80px;
-  }
-}
-.leader p {
-  line-height: 1.7;
-}
-
-.feature hr,
-.flip-flop hr {
-  margin: 0 10px 40px;
-}
-@media all and (min-width: 40.063em) {
-  .feature hr,
-  .flip-flop hr {
-    margin: 0 0 80px;
-  }
-}
-
-.feature {
-  margin-top: 80px;
-  margin-bottom: 80px;
-}
-.feature .img-wrap {
-  display: block;
-  max-width: 200px;
-  margin: 20px auto;
-}
-.feature .item {
-  margin-bottom: 40px;
-}
-
-.flip-flop {
-  margin-top: 80px;
-  margin-bottom: 80px;
-}
-.flip-flop .flip-flop-left,
-.flip-flop .flip-flop-right {
-  clear: both;
-  overflow: hidden;
-  margin-bottom: 80px;
-}
-
-.wpt-avatar {
-  display: inline-block;
-  border-radius: 500px;
-  overflow: hidden;
-  width: 160px;
-  height: 160px;
-  vertical-align: middle;
-  margin: 0 0 20px;
-}
-.wpt-avatar img {
-  display: block;
-}
-.wpt-avatar.small {
-  width: 24px;
-  height: 24px;
-  margin: 0 5px 0 0;
-}
-.wpt-avatar.large {
-  width: auto;
-  height: auto;
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.form-item {
-  display: block;
-  margin: 0 0 30px;
-}
-.form-item .note {
-  color: #d4d9dd;
-  font-size: 12px;
-  float: right;
-  position: relative;
-  top: 2px;
-  right: 2px;
-}
-.form-item .message {
-  display: none;
-}
-
-.form-success {
-  border-top: 1px solid #edeff0;
-  margin-top: 20px;
-  padding-top: 20px;
-}
-@media all and (min-width: 40.063em) {
-  .form-success {
-    margin-top: 40px;
-    padding-top: 60px;
-  }
-}
-
-label {
-  display: block;
-  font-size: 1.8em;
-  margin: 0 0 10px;
-  color: #384047;
-}
-
-input,
-textarea,
-button {
-  outline: none;
-  font-family: "Asap", sans-serif;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -o-border-radius: 2px;
-  border-radius: 2px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-input,
-textarea {
-  background: white;
-  border: none;
-  color: #384047;
-  display: block;
-  font-size: 1em;
-  line-height: 2em;
-  padding: 10px;
-  width: 100%;
-  -webkit-box-shadow: inset 0 0 0 2px #d1d6d9;
-  -moz-box-shadow: inset 0 0 0 2px #d1d6d9;
-  box-shadow: inset 0 0 0 2px #d1d6d9;
-  -webkit-transition: box-shadow 200ms ease-in-out;
-  -moz-transition: box-shadow 200ms ease-in-out;
-  -o-transition: box-shadow 200ms ease-in-out;
-  transition: box-shadow 200ms ease-in-out;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-input:hover,
-textarea:hover {
-  -webkit-box-shadow: inset 0 0 0 2px #9aa5aa;
-  -moz-box-shadow: inset 0 0 0 2px #9aa5aa;
-  box-shadow: inset 0 0 0 2px #9aa5aa;
-}
-input:focus,
-textarea:focus {
-  -webkit-box-shadow: inset 0 0 0 2px #384047;
-  -moz-box-shadow: inset 0 0 0 2px #384047;
-  box-shadow: inset 0 0 0 2px #384047;
-}
-
-.btn, #submit, .comment-reply-link, #searchsubmit {
-  display: inline-block;
-  background: #384047;
-  font-size: 1.6em;
-  color: white;
-  padding: 12px 18px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -o-border-radius: 2px;
-  border-radius: 2px;
-  box-shadow: none;
-}
-#submit, #searchsubmit {
-  width: auto;
-  font-size: .9em;
-  border: none;
-}
-.comment-reply-link {
-  font-size: .8em;
-  padding: 5px 10px;
-  box-shadow: none;
-}
-input#s {
-  width: 70%;
-  float: left;
-  margin: 1px;
-}
-.widget {
-  margin: 10px 0 20px;
-}
-.btn:hover, #submit:hover, .comment .comment-reply-link:hover {
-  background: #2d3339;
-  color: white;
-}
-.btn:active, #submit:active {
-  background: #5a6672;
-}
-.btn.large, #submit.large {
-  font-size: 2em;
-  padding: 18px 24px;
-}
-.btn.ghost, #submit.ghost {
-  background: transparent;
-  color: #384047;
-  -webkit-box-shadow: inset 0 0 0 2px #384047;
-  -moz-box-shadow: inset 0 0 0 2px #384047;
-  box-shadow: inset 0 0 0 2px #384047;
-  -webkit-transition: opacity 200ms ease-in-out;
-  -moz-transition: opacity 200ms ease-in-out;
-  -o-transition: opacity 200ms ease-in-out;
-  transition: opacity 200ms ease-in-out;
-}
-.btn.ghost:hover, #submit.ghost:hover {
-  opacity: 0.9;
-}
-.btn.ghost:active, #submit.ghost:active {
-  color: #7e8d9a;
-}
-
-.form-item.error input {
-  -webkit-box-shadow: inset 0 0 0 3px #ed5a5a;
-  -moz-box-shadow: inset 0 0 0 3px #ed5a5a;
-  box-shadow: inset 0 0 0 3px #ed5a5a;
-}
-.form-item.error .message {
-  margin: 10px 0;
-  display: block;
-  font-size: 1.6em;
-  font-style: italic;
-}
-.form-item.error .message.error {
-  color: #ed5a5a;
-}
-
-.contact-form {
-  border-top: 1px solid #edeff0;
-  margin: 40px 0 0;
-  padding: 40px 10px 0;
-}
-
-.work-item {
-  margin-bottom: 20px;
-}
-
-article {
-  margin-bottom: 60px;
-}
-
-
-@media all and (min-width: 64.063em) {
-  article .img-container.expanded {
-    margin-left: -90px;
-    margin-right: -90px;
-  }
-}
-.comment .vcard {
-  border: none;
-  display: inline-block;
-  margin: 0;
-  padding: 5px 0;
-}
-ol.commentlist {
-  margin-left: 0
-}
-.commentlist li {
-  list-style: none;
-  padding: 0
-}
-ol.children {
-  margin-left: 1.68rem;
-}
-.reply {
-  margin-bottom: 20px;
-}
-
-
-/* =================My custom styles================= */
-
-
-/* header */
-
-header {
-  display: flex;
-}
-
-header a {
-  margin: 0 auto;
-}
-
-header.row {
-  max-width: 100%;
-  text-align: center;
-}
-
-header img {
-  max-height: 200px;
-  transform: scale(1.3);
-}
-
-
-
-/* prebar */
-
-#amy-prebar {
-    padding-top: 20px;
-}
-
-#amy-prebar > a {
-  cursor: default;
-}
-
-.prebar {
-  padding: 12vh 1.1rem;
-  margin: 0px;
-}
-
-.prebar-logo {
-    max-width: 100%;
-    opacity: 0;
-    -o-transition: opacity .3s ease-in-out;
-    -moz-transition: opacity .3s ease-in-out;
-    -webkit-transition: opacity .3s ease-in-out;
-    transition: opacity .3s ease-in-out;
-}
-
-.show {
-    cursor: pointer;
-    opacity: 100;
-    -o-transition: opacity .5s ease-in-out;
-    -moz-transition: opacity .5s ease-in-out;
-    -webkit-transition: opacity .5s ease-in-out;
-    transition: opacity .5s ease-in-out;
-}
-
-.prebar li {
-  display: block;
-  max-width: 100%;
-}
-
-.prebar a {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.prebar i {
-  padding: 16px 16px 16px 0;
-  color: #000;
-  transition: color .3s;
-}
-
-.prebar .fa-facebook:hover {
-    color: #3b5998;
-}
-
-.prebar .fa-twitter:hover {
-    color: #55acee;
-}
-
-.prebar .fa-instagram:hover {
-    color: #999;
-}
-
-.prebar .fa-pinterest:hover {
-    color: #cb2027;
-}
-
-
-
-/* content */
-
-h1{
-    font-size: 1.8rem;
-    letter-spacing: -.05rem;
-}
-h2 {
-    font-size: 1.3rem;
-}
-
-.post-title a {
-    padding-top: 5px;
-    color: #000;
-    transition: color 0.3s;
-}
-
-.post-title a:hover {
-    color: #c0a154;
-}
-
-.title-date {
-    font-size: 1.25em;
-    color: #c0a154;
-}
-
-.post-content {
-    margin: 1.2em 0;
-}
-
-.title-date i {
-  color: #1B1D20;
-}
-
-.post-meta a,
-.title-date a,
-.post-content p a {
-    -webkit-box-shadow: inset 0px -2px 0px 0px rgba(0,0,0,0.10);
-    -moz-box-shadow: inset 0px -2px 0px 0px rgba(0,0,0,0.10);
-    box-shadow: inset 0px -2px 0px 0px rgba(0,0,0,0.10);
-    transition: box-shadow 0.3s ease-in-out;
-    z-index: -1;
-}
-
-.post-meta a:hover,
-.title-date a:hover,
-.post-content p a:hover {
-    content: '';
-    -webkit-box-shadow: inset 0px -2px 0px 0px rgba(192, 161, 84, .6);
-    -moz-box-shadow: inset 0px -2px 0px 0px rgba(192, 161, 84, .6);
-    box-shadow: inset 0px -2px 0px 0px rgba(192, 161, 84, .6);
-}
-
-.category .title-date span,
-.search .title-date span {
-  margin: 0 2rem 0 .5rem;
-}
-
-.post-thumbnail img {
-  margin-bottom: 1.3rem;
-}
-
-.post-meta {
-  margin-left: 1.1rem;
-  margin-right: 1rem;
-  font-size: .8rem;
-  line-height: 1.4rem;
-}
-
-.post-meta i::before {
-    font-size: 12px;
-    color: #666;
-}
-
-.post-meta div {
-  margin-bottom: .5em;
-}
-
-.gallery img {
-    border: none !important;
-}
-
-.gallery-item {
-    margin: 0!important;
-    padding: 0!important;
-}
-
-dl dt {
-    margin-bottom: 0.2em;
-}
-
-blockquote {
-  margin: 0;
-  width: 50%;
-  float: left;
-  border-left: 10px solid #ddd;
-}
-
-blockquote p {
-  color: #222;
-  font-family: "Quicksand", helvetica, sans-serif;
-  margin: 10px 10px 20px;
-}
-
-
-/* single post styles */
-
-.single hr {
-  margin-top: 0;
-}
-
-.single .post-content {
-  margin-bottom: 0;
-}
-
-#respond {
-  margin-top: 1rem;
-}
-
-.comments h2 {
-  margin-top: 26px;
-}
-
-.comments p,
-.comment-edit-link {
-  font-size: .9rem;
-}
-
-.commentList span {
-  font-family: "Quicksand", helvetica, sans-serif;
-  letter-spacing: -0.025em;
-}
-
-#commentform {
-  margin: 0 1.4rem;
-}
-
-.post-meta small {
-  font-size: 1rem;
-}
-
-
-/* sidebar */
-
-.screen-reader-text {
-  display: none;
-}
-
-input#s { /* search form text field */
-  float: none;
-  width: 212px;
-  margin: 0 1px;
-  font-size: 1.2em;
-  line-height: 1.6em;
-}
-
-#searchsubmit {
-  display: none;
-}
-
-.navigation {
-  margin-top: 23px;
-}
-
-.navigation ul {
-    margin-left: 0;
-    list-style-type: none;
-}
-
-.navigation a {
-    display:inline-block;
-    width: 100%;
-    height: 100%;
-    line-height: 2.25em;
-    font-family: "Quicksand", helvetica, sans-serif;
-    border-bottom: 1px #fff solid;
-    transition: border-color 0.3s;
-    color: #c0a154;
-}
-
-.navigation a:hover {
-    border-color: #999;
-
-}
-
-.sidebar-widget.widget-container {
-  margin-left: 4em;
-}
-
-.widget-container:nth-child(n+2) {
-    margin-top: 2.2em;
-}
-
-
-/* mobile menu styles */
-
-.mobile-menu input#s {
-  margin: 0 auto;
-  width: 66%;
-}
-
-/* footer styles */
-footer ul {
-  display: none;
-  list-style-type: none;
-  margin: 0 5% 10px;
-}
-
-footer li {
-  display: inline-block;
-  margin: 0 10%;
-  padding: 0 0 18px;
-}
-
-
-
-
-/* custom media queries */
-
-@media screen and (max-width: 40em) {
-  
-  header img {
-    max-height: 150px;
-    margin-bottom: -25px;
-  }
-
-  h1 {
-    font-size: 1.6rem;
-  }
-}
-
-@media only screen and (max-width: 64.063em) {  /* for medium down */
-
-    .prebar {
-        display: none;
-    }
-
-    #amy-prebar-logo {
-        display: none;
-    }
-
-    .leader {
-      padding: 0 .5rem;
-    }
-
-    .nav-toggle {
-      display: block;
-    }
-
-    .navigation a {
-      width: auto;
-    }
-
-    footer ul {
-      display: initial;
-    }
-
-    span[data-pin-log="button_pinit_floating"] {
-        -ms-transform: scale(1.5,1.5); /* IE 9 */
-        -webkit-transform: scale(1.5,1.5); /* Chrome, Safari, Opera */
-        transform: scale(1.5,1.5);
-    }
-
-}
-
-
-@media only screen and (min-width: 40.063em) and (max-width: 64.063em) {  /* only medium */
-
-  .leader {
-    padding: 0 12% 0 10%;
-  }
-
-}
-
-
-
-
-/* PLUGIN: adjust post social sharing styles */
-
-.apss-icon-block {
-    background: none!important;
-    border: none!important;
-    padding: 16px 4px!important;
-}
-
-.apss-social-share {
-    margin-left: 9px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.apss-single-icon {
-    flex-grow: 1;
-}
-
-.apss-single-icon div {
-    margin: 20px auto;
-}
-
-
-/* PLUGIN: Adjust Lightbox Gallery Styles */
-
-#imageDataContainer {
-  background: none!important;
-}
-
-#imageDetails {
-  background: none;
-  color: #ddd;
-  padding: .5rem 0;
-}
-
-#titleText {
-  display: none;
-}
-
-#jqlb_closelabel {
-  display:none;
-}
-
-#playPause {
-  color: #9E9E9E;
-}
-
-#bottomNavClose {
-  padding: 1em 0 0 45px
-}
-
-#bottomNavClose::before {
-  content: "\f00d";
-  font-family: FontAwesome;
-  color: #E53935;
-  font-size: 1.4rem;
-}
-
-
-/* fontawesome offline facsimile */
-
-/*i::after {
-  content: '•';
-}*/
+/* Hi my name is style.css and I am irrelevant */
