updated build workflow, added a few important files, changed active state of menu

--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -68,3 +68,6 @@
     font-size: 1.8rem!important
   .nav__fa
     min-height: 1.2rem
+
+.nav__li--active .nav__a
+  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5)
