--- a/css/app.css
+++ b/css/app.css
@@ -1218,4 +1218,7 @@ i.fa {
   .nav--body .nav__fa {
     min-height: 1.2rem; }
 
+.nav__li--active .nav__a {
+  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); }
+
 /*# sourceMappingURL=app.css.map */
