added lightbox kind of thing for posts. added contact form.

--- a/sass/components/header.sass
+++ b/sass/components/header.sass
@@ -99,6 +99,8 @@
       animation-delay: 0.15s
     &:nth-child(4)
       animation-delay: 0.2s
+    &:nth-child(5)
+      animation-delay: 0.25s
   & ~ .x
     z-index: initial
 
