--- a/sass/settings/vars.sass
+++ b/sass/settings/vars.sass
@@ -58,6 +58,7 @@ html:root
   --purple                      : #b60977
   --teal                        : #19cada
   --teal-dark                   : #1b5c64
+  --red                         : #e74c3c
 
   /* animation values
    * ================================ */
