--- a/css/app.css
+++ b/css/app.css
@@ -11,6 +11,7 @@ html:root {
   --purple: #b60977;
   --teal: #19cada;
   --teal-dark: #1b5c64;
+  --red: #e74c3c;
   /* animation values
    * ================================ */
   --standard-easing-duration: 0.24s;
@@ -182,9 +183,7 @@ html:root {
     -webkit-transform: translateX(0);
             transform: translateX(0); } }
 
-@-webkit-keyframes {}
-
-@keyframes {}.mq {
+.mq {
   position: fixed;
   top: 2px;
   left: 2px;
@@ -581,6 +580,7 @@ template {
 
 body {
   background-color: var(--white);
+  position: relative;
   padding: 0;
   margin: 0; }
 
@@ -947,6 +947,9 @@ i.fa {
   .header--open .nav__li:nth-child(4) {
     -webkit-animation-delay: 0.2s;
             animation-delay: 0.2s; }
+  .header--open .nav__li:nth-child(5) {
+    -webkit-animation-delay: 0.25s;
+            animation-delay: 0.25s; }
 
 .header--open ~ .x {
   z-index: initial; }
@@ -963,6 +966,12 @@ i.fa {
 
 .card {
   position: relative;
+  border: 0;
+  padding: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font: inherit;
   width: calc(90vw - 2rem);
   margin: 0 auto 2rem;
   display: -webkit-box;
@@ -992,6 +1001,42 @@ i.fa {
     .card {
       width: initial; } }
 
+.card--small {
+  cursor: pointer; }
+
+.card--large {
+  min-width: initial !important;
+  max-width: 1000px !important;
+  max-height: 800px;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto !important;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+  pointer-events: none; }
+  @media screen and (min-width: 900px) {
+    .card--large {
+      width: 90%;
+      height: 90%; } }
+  .card--large .card__cont {
+    width: 100%;
+    padding: 1.5rem;
+    -ms-flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+            flex-direction: row; }
+
+.card--active {
+  opacity: 1;
+  pointer-events: initial; }
+
 .card__img-c {
   -ms-flex: 1;
   -webkit-box-flex: 1;
@@ -1010,6 +1055,17 @@ i.fa {
   -webkit-box-direction: normal;
           flex-direction: column; }
 
+.card__cont-1 {
+  -ms-flex: 1;
+  -webkit-box-flex: 1;
+          flex: 1; }
+
+.card__cont-2 {
+  -ms-flex: 2;
+  -webkit-box-flex: 2;
+          flex: 2;
+  overflow-y: scroll; }
+
 .card__title {
   text-transform: uppercase;
   font-size: 0.85rem;
@@ -1021,6 +1077,15 @@ i.fa {
   font-style: italic;
   font-weight: 400;
   color: var(--grey); }
+
+.card__close {
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 0;
+  color: var(--red); }
+  .card__close i {
+    font-style: normal;
+    font-size: 1.33rem; }
 
 @media screen and (min-width: 600px) {
   .gallery--flex .card {
@@ -1220,5 +1285,30 @@ i.fa {
 
 .nav__li--active .nav__a {
   text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); }
+
+.gallery__backdrop {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  background-color: rgba(10, 10, 10, 0.33);
+  opacity: 0;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+  pointer-events: none; }
+
+.gallery__backdrop--active {
+  opacity: 1;
+  pointer-events: initial; }
+
+.content {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto; }
+
+.content--contact {
+  max-width: 560px; }
 
 /*# sourceMappingURL=app.css.map */
