--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -1,6 +1,10 @@
 .card
   position: relative
   // min-height: 300px
+  border: 0
+  padding: 0
+  align-items: center
+  font: inherit
   width: calc(90vw - 2rem)
   margin: 0 auto 2rem
   @include display-flex
@@ -15,6 +19,39 @@
   @media screen and ( $min-width-smedium )
     width: initial
 
+.card--small
+  cursor: pointer
+
+
+.card--large
+  min-width: initial!important
+  max-width: 1000px!important
+  max-height: 800px
+  position: fixed
+  z-index: 2
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
+  margin: auto!important
+  width: 100%
+  height: 100%
+  opacity: 0
+  transition: opacity 0.3s ease-in-out
+  pointer-events: none
+  @media screen and ($min-width-medium)
+    width: 90%
+    height: 90%
+
+  .card__cont
+    width: 100%
+    padding: 1.5rem
+    +flex-direction(row)
+
+.card--active
+  opacity: 1
+  pointer-events: initial
+
 .card__img-c
   @include flex-shorthand(1)
 
@@ -25,6 +62,13 @@
   min-height: 115px
   @include flex-shorthand(1)
   @include flex-direction(column)
+
+.card__cont-1
+  +flex-shorthand(1)
+
+.card__cont-2
+  +flex-shorthand(2)
+  overflow-y: scroll
 
 .card__title
   text-transform: uppercase
@@ -37,6 +81,15 @@
   font-style: italic
   font-weight: 400
   color: var(--grey)
+
+.card__close
+  cursor: pointer
+  font-size: 1rem
+  padding: 0
+  color: var(--red)
+  i
+    font-style: normal
+    font-size: 1.33rem
 
 // this is anti-pattern but I will allow it
 .gallery--flex
