--- a/sass/components/buttons.sass
+++ b/sass/components/buttons.sass
@@ -5,7 +5,8 @@
 .btn--un
   background: 0
   border: 0
-  
+  &:hover, &:focus, &:active
+    background: 0
 
 .btn--more
   background-color: var(--teal)
