--- a/sass/components/gallery.sass
+++ b/sass/components/gallery.sass
@@ -1,5 +1,5 @@
 .gallery__backdrop
-  position: absolute
+  position: fixed
   // z-index: 1
   top: 0
   right: 0
@@ -22,3 +22,4 @@
 
 .content--contact
   max-width: 560px
+  margin-top: 4rem
