--- a/sass/components/index.sass
+++ b/sass/components/index.sass
@@ -3,7 +3,7 @@
 @import 'buttons'
 // @import 'media_card'
 // @import 'feature'
-// @import 'section'
+@import 'embed_container'
 @import 'cover'
 @import 'nav'
 @import 'gallery'
