--- a/sass/settings/vars.sass
+++ b/sass/settings/vars.sass
@@ -30,6 +30,7 @@ $material                       : true
 $easing-duration                : 0.33s
 $standard-easing-bezier         : cubic-bezier(0.56, 0.26, 0.37, 0.98)
 $perspective-easing-bezier      : cubic-bezier(0.53, 1, 0.9, 1)
+$card-overlay-height            : 800px
 
 // borders
 // =======
@@ -39,6 +40,7 @@ $border-radius                  : 2px
 // =====                    
 $font-body                      : 'Montserrat', tahoma, helvetica, sans-serif
 $font-script                    : 'Playfair Display', times, serif
+
 
 
 // HTML Custom Properties =====================================================
