--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Github Theme URI:   https://www.google.com
 Description:        helena's theme
 Version:            1.0.0
 Author:             David Duffy
-Author URI:         http://www.google.com
+Author URI:         http://daviduffy.me;
 
 License:            MIT License
 License URI:        http://www.opensource.org/licenses/mit-license.php
