--- a/sass/components/header.sass
+++ b/sass/components/header.sass
@@ -60,7 +60,7 @@
 .header--open
   .nav--header,
   .nav__ul
-    height: 192px
+    height: 255px
 
   .nav--header
     display: block
@@ -69,7 +69,7 @@
     max-width: 100%
     max-height: 100vh
     width: 100%
-    height: 330px
+    height: 460px
     mix-blend-mode: darken
     right: 0
 
@@ -101,6 +101,8 @@
       animation-delay: 0.2s
     &:nth-child(5)
       animation-delay: 0.25s
+    &:nth-child(6)
+      animation-delay: 0.3s
   & ~ .x
     z-index: initial
 
