--- a/css/app.css
+++ b/css/app.css
@@ -887,7 +887,7 @@ i.fa {
 
 .header--open .nav--header,
 .header--open .nav__ul {
-  height: 192px; }
+  height: 255px; }
 
 .header--open .nav--header {
   display: block; }
@@ -896,7 +896,7 @@ i.fa {
   max-width: 100%;
   max-height: 100vh;
   width: 100%;
-  height: 330px;
+  height: 460px;
   mix-blend-mode: darken;
   right: 0; }
 
@@ -950,6 +950,9 @@ i.fa {
   .header--open .nav__li:nth-child(5) {
     -webkit-animation-delay: 0.25s;
             animation-delay: 0.25s; }
+  .header--open .nav__li:nth-child(6) {
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s; }
 
 .header--open ~ .x {
   z-index: initial; }
@@ -1037,6 +1040,7 @@ i.fa {
     -ms-flex: 5;
     -webkit-box-flex: 5;
             flex: 5;
+    min-height: 71.4%;
     -ms-align-self: stretch;
     -webkit-align-self: stretch;
     -ms-flex-item-align: stretch;
@@ -1096,9 +1100,6 @@ i.fa {
     position: absolute;
     right: 0.875rem;
     top: 0.875rem; }
-    @media screen and (min-width: 900px) {
-      .card--active .card__close {
-        position: initial; } }
 
 .card--vertical {
   display: -webkit-box;
@@ -1124,6 +1125,8 @@ i.fa {
   -ms-flex: unset;
   -webkit-box-flex: unset;
           flex: unset; }
+  .card__img--youtube.card__img--youtube .card__img {
+    min-height: unset; }
 
 .card__img-c {
   -ms-flex: 1;
@@ -1131,13 +1134,20 @@ i.fa {
           flex: 1; }
 
 .card__img {
-  max-width: 100%; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 100%;
+  -ms-flex: 1;
+  -webkit-box-flex: 1;
+          flex: 1; }
 
 .card__cont {
   min-height: 115px;
-  -ms-flex: 1;
-  -webkit-box-flex: 1;
-          flex: 1;
   -ms-flex-direction: column;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -1242,7 +1252,8 @@ i.fa {
   padding-bottom: 56.25%;
   height: 0;
   overflow: hidden;
-  max-width: 100%; }
+  max-width: 100%;
+  width: 100%; }
 
 .embed-container iframe,
 .embed-container object,
